# main

./: README.md  hello  hello.c  mario
AUD/: binarytree.c  const  const.c  fill_occurence.c  function  function.c  qs  qs.c  swap  swap.c
AUD/arrray/: array  array.c
DIS/: anzahl_teiler.py  teiler.py
EMI/: kalender.dart  out.js  out.js.deps  out.js.map
Uebung/: 1.Übung_Permutationen.txt  a.out  faculty.c  faculty2  faculty2.c  fibonacci  fibonacci.c  fibonacci3  fibonacci3.c  geldbetrag  geldbetrag.c  maximum  maximum.c  prime  prime.c  random  random.c  tabelle  tabelle.c
cplusplus/: draw  draw.cpp
cs50/: hellome  hellome.c  mario  mario.c
cs50tests/: const  const.c
cs50videotests/: add  add.c  mario.c
ex4b/: Cargo.toml
ex4b/src/: colors  destructor  destructor.rs  keyword_ref  keyword_ref.rs
exercise4a/: Cargo.toml
exercise4a/src/: main.rs
firstweb/: db.sqlite3  manage.py
firstweb/app1/: urls.py  views.py
firstweb/firstweb/: asgi.py  settings.py  urls.py  wsgi.py
pointer/: pointer  pointer.c
prog_uebung_2024/: conjencture  conjencture.rs  hello_world  hello_world.rs
prog_uebung_2024/hello_cargo/: Cargo.toml
prog_uebung_2024/hello_cargo/src/: main.rs
pset1/: mario  mario.c  population  population.c  pupulation
pset2/: caeser  caeser.c  compare  compare.c  readability  readability.c  scrabble  scrabble.c  substitution  substitution.c
src/: main.rs
swt1/: Calculator.java  Functions.java  Hello_world.java  Human.java  Leet.java  Main.java  MyTaxiTest.java  Taxi.java  TestCalculator.java
test/: FirstTest.java
wiki/: db.sqlite3
(+44 files in other folders)
